# sk7

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
UnitTests/: CMakeLists.txt  unitTest.cpp  unitTest.py  unitTest15-5.cpp  unitTestAltComparison.cpp
UnitTests/Minimiser/: CMakeLists.txt  testKmerMini.cpp
UnitTests/Research/: CMakeLists.txt  testResearch.cpp
apps/: CMakeLists.txt  main  main.cpp
src/: Bucket.cpp  BucketMap.cpp  CMakeLists.txt  FastaReader.cpp  FastaReader.hpp  Kff_scanner.cpp  Kmer.cpp  Kmer.hpp  Minimiser.cpp  Minimizer.cpp  SuperKmer.cpp  exampleHash.cpp  exampleHash.hpp  main.cpp  utils.cpp
src/headers/: Bucket.hpp  BucketMap.hpp  Kff_scanner.hpp  Kmer.hpp  Minimiser.hpp  Minimizer.hpp  SuperKmer.hpp  exampleHash.hpp  utils.hpp
testingFiles/: test1.txt
tests/: CMakeLists.txt  genSeq.py  testKmerMini.cpp  unitTest.py
